# python-project-52

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: app-tests.yml
labels/: tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: status_confirm_delete.html  (+2 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager_/task_manager/: settings.py
task_manager_/templates/: base.html
task_manager_/users/: urls.py  views.py
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_task_labels.py
templates/: base.html  index.html
templates/registration/: login.html
templates/statuses/: status_confirm_delete.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_list.html
users/: forms.py  tests.py  urls.py  views.py
(+11 files in other folders)
