[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=5.2.10",
    "django-bootstrap5>=26.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 88
target-version = "py310"

# Что проверяем
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort (импорты)
  "B",  # bugbear
  "UP", # pyupgrade
]

# Что игнорируем
ignore = [
  "E501", # длина строки (часто мешает в Django)
]

# Что не проверяем
exclude = [
  "migrations",
  "__pycache__",
  "settings.py",
]
